# espe

./: .gitignore  CHANGELOG.md  README.md  dist-workspace.toml
.github/: build.yml
.github/workflows/: npm_build_test.yml  rust_build_test.yml
backend/: .env  .gitignore  Cargo.toml  build.rs  rustfmt.toml
backend/migrations/2022-05-25-101727_initialisation/: down.sql  up.sql
backend/migrations/2024-02-26-120029_global_variables/: down.sql  up.sql
backend/migrations/2024-03-05-124412_container_build_versioning/: down.sql  up.sql
backend/migrations/2025-04-29-153636_execution_step_versioning/: down.sql  up.sql
backend/src/: application.rs  controller.rs  main.rs  model.rs  schema.rs  service.rs  test_utility.rs
backend/src/application/: config.rs  database.rs  environment.rs  error.rs
backend/src/controller/: experiment_controller.rs  file_controller.rs  global_data_controller.rs  global_data_file_controller.rs  log_controller.rs  pipeline_controller.rs  routing.rs  sample_controller.rs
backend/src/controller/experiment_controller/: tests.rs
backend/src/controller/file_controller/: experiment_tests.rs  global_data_tests.rs
backend/src/controller/global_data_controller/: tests.rs
backend/src/controller/global_data_file_controller/: tests.rs
backend/src/controller/sample_controller/: tests.rs
backend/src/model/: db.rs  exchange.rs  internal.rs
backend/src/model/db/: experiment.rs  experiment_execution.rs  global_data.rs  pipeline.rs  pipeline_build_register.rs  pipeline_global_variable.rs  pipeline_step.rs  pipeline_step_instance.rs  pipeline_step_variable.rs
backend/src/model/exchange/: experiment_details.rs  experiment_pipeline.rs  experiment_step_logs.rs  experiment_upload.rs  file_path.rs  global_data_details.rs  global_data_file_upload.rs  pipeline_blueprint_details.rs  pipeline_step_details.rs  pipeline_variable_upload.rs
backend/src/model/internal/: archive.rs  pipeline_blueprint.rs  step.rs
backend/src/service/: container_service.rs  download_service.rs  execution_service.rs  experiment_service.rs  global_data_service.rs  multipart_service.rs  pipeline_service.rs  temp_file_service.rs  validation_service.rs
backend/wix/: main.wxs
container/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.vite-config.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: ErrorPopup.vue  FileTree.vue  GlobalDataCreation.vue  GlobalDataDetails.vue  GlobalDataList.vue  GlobalDataTitle.vue  HomePage.vue  PipelineDetails.vue  SampleSubmission.vue
frontend/src/router/: index.ts
frontend/src/scripts/: pipeline-blueprint.ts  types.ts  utilities.ts
frontend/src/views/: AuthorView.vue  ExperimentDetailsView.vue  ExperimentRunDetailsView.vue  ExperimentView.vue  GeneralInformationView.vue  (+4 more)
pipelines/wiedemann_atac_pipeline/: pipeline.json
pipelines/wiedemann_atac_rna_integration/: pipeline.json
pipelines/wiedemann_genome_preprocess/: pipeline.json
pipelines/wiedemann_scrna_pipeline/: pipeline.json
pipelines/wiedemann_scrna_pipeline_ilcs/: pipeline.json
testing_resources/requests/: sample_submission_multipart  sample_submission_multipart_empty_mail  sample_submission_multipart_empty_name  sample_submission_multipart_invalid_mail  sample_submission_multipart_no_comment_mail
(+263 files in other folders)
