[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-multipart = "0.7.2"
actix-web = {version="4.13.0", features=["openssl"]}
ammonia = "4.1.2"
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2.3.7", features = ["chrono", "r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3.1"
dotenv = "0.15.0"
email_address = "0.2.9"
env_logger = "0.11.10"
futures = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
getset = "0.1.6"
openssl = "0.10.76"
parking_lot = "0.12.5"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
twox-hash = "2.1.2"
uuid = { version = "1.23.0", features = ["serde", "v1", "v4"] }
walkdir = "2.5.0"
zip = "8.5.1"

[dev-dependencies]
mime = "0.3.17"
serial_test = "3.4.0"